package Screen;

public class main {
    public static void main(String[] args) {
        new Frame();
    }
}
