@startuml

title __SCREEN's Class Diagram__\n

  namespace Screen {
    class Screen.Button_panel {
        ~ close : rounded_button
        ~ signin : rounded_button
        + Button_panel()
    }
  }
  

  namespace Screen {
    class Screen.Frame {
        + Frame()
    }
  }
  

  namespace Screen {
    class Screen.ava_panel {
        - avatar : BufferedImage
        # paintComponent()
        ~ ava_panel()
    }
  }
  

  namespace Screen {
    class Screen.login_panel {
        ~ forgot_pass : JLabel
        ~ name_field : textfield_type
        ~ pass_field : textfield_type
        + login_panel()
    }
  }
  

  namespace Screen {
    class Screen.login_screen {
        ~ lg : login_zone
        - background : BufferedImage
        + login_screen()
        # paintComponent()
    }
  }
  

  namespace Screen {
    class Screen.login_zone {
        ~ ava : BufferedImage
        + login_zone()
    }
  }
  

  namespace Screen {
    class Screen.main {
        + main()
        {static} + main()
    }
  }
  

  namespace Screen {
    class Screen.rounded_button {
        ~ shape : Shape
        - arc : int
        + contains()
        + rounded_button()
        # paintBorder()
        # paintComponent()
    }
  }
  

  namespace Screen {
    class Screen.rounded_panel {
        - backgroundColor : Color
        - cornerRadius : int
        + rounded_panel()
        + rounded_panel()
        # paintComponent()
    }
  }
  

  namespace Screen {
    class Screen.textfield_type {
        - shape : Shape
        + contains()
        + textfield_type()
        # paintBorder()
        # paintComponent()
    }
  }
  

  Screen.Button_panel -up-|> javax.swing.JPanel
  Screen.Frame -up-|> javax.swing.JFrame
  Screen.ava_panel -up-|> javax.swing.JPanel
  Screen.login_screen -up-|> javax.swing.JPanel
  Screen.login_zone -up-|> javax.swing.JPanel
  Screen.rounded_button -up-|> javax.swing.JButton
  Screen.rounded_panel -up-|> javax.swing.JPanel
  Screen.textfield_type -up-|> javax.swing.JTextField


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
